# Real-estate-labels-and-3DGS-evaluation

./: .gitignore  README.md  pyproject.toml
3DGS-Reconstruction-Evaluation/: config.yaml  evaluate.py
3DGS-Reconstruction-Evaluation/captured_views/ktv75/: views_metadata.json
3DGS-Reconstruction-Evaluation/captured_views/ktv_hevc/: views_metadata.json
3DGS-Reconstruction-Evaluation/captured_views/ktv_hevc_deblur035/: views_metadata.json
3DGS-Reconstruction-Evaluation/results/: comparison.json  comparison_report.md  ktv75_report.md  ktv75_results.json  ktv_hevc_deblur035_report.md  ktv_hevc_deblur035_results.json  ktv_hevc_report.md  ktv_hevc_results.json
3DGS-Reconstruction-Evaluation/results/test_metrics_cv_only/: comparison.json  comparison_report.md  ktv75_report.md  ktv75_results.json  ktv_hevc_deblur035_report.md  ktv_hevc_deblur035_results.json  ktv_hevc_report.md  ktv_hevc_results.json
3DGS-Reconstruction-Evaluation/src/: evaluator.py  report_generator.py
semantic-label/: config.yaml
semantic-label/dataset/: property_001_75368309.json  property_002_26283446.json  property_003_04747705.json  property_004_07415828.json  property_007_87207627.json  property_008_63683364.json  property_009_72339406.json  property_010_32695065.json  property_011_47351281.json  property_012_89064161.json
semantic-label/src/: clip_classifier.py  data_loader.py  debug_classification.py  evaluator.py  label_generator.py  main.py  openai_label_generator.py  region_adapter.py  scene_classifier.py  siglip_classifier.py  siglip_label_generator.py
(+12 files in other folders)
