[project]
name = "semantic-label"
version = "0.1.0"
description = "Real-estate semantic labeling system using VLMs"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "open-clip-torch>=2.24.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "transformers>=4.57.3",
    # 3DGS Evaluation dependencies
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
    "lpips>=0.1.4",
    "playwright>=1.40.0",
    "google-generativeai>=0.3.0",
    "openai>=2.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["semantic-label/src"]
